# proxysvpn-desktop

./: .gitignore  INSTALL.md  LICENSE  README.md  README_RU.md  RELEASE_NOTES.md  package-lock.json  package.json  tailwind.config.js
scripts/: fetch-binaries.sh  publish-release.sh
src/: App.css  App.tsx  css-additions.css  i18n.ts
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/scripts/: bench-configs.sh  build-installer.sh  build-release.sh  bundle-installer-into-dmg.sh  launcher.sh  post-build-wrap.sh  sign-binaries.sh
src-tauri/src/: hysteria_manager.rs  lib.rs  logger.rs  main.rs  ping.rs  subscription.rs  system_proxy.rs  tun.rs  xray_manager.rs
src/components/: LogViewer.tsx  ThemeToggle.tsx
