[package]
name = "proxysvpn-desktop"
version = "0.1.0"
description = "ProxysVPN Desktop"
authors = ["ProxysVPN"]
edition = "2021"

[lib]
name = "proxysvpn_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
base64 = "0.22"
urlencoding = "2"
url = "2"
anyhow = "1"
thiserror = "2"
